fix styles for the section template component in favor of a better button spacing

--- a/src/app/components/image/image.component.scss
+++ b/src/app/components/image/image.component.scss
@@ -1,7 +1,6 @@
 .image {
   height: 100%;
   img {
-    height: 100%;
     width: 100%;
     object-fit: cover;
     border-radius: 10px;
