--- a/src/app/templates/image-section/image-section.component.scss
+++ b/src/app/templates/image-section/image-section.component.scss
@@ -13,7 +13,7 @@ section {
   }
 
   .image {
-    max-height: 300px;
+    min-height: 300px;
     margin-bottom: 30px;
   }
 
